--- a/.github/workflows/Openwrt-AutoBuild.yml
+++ b/.github/workflows/Openwrt-AutoBuild.yml
@@ -6,24 +6,20 @@
 # Blog: https://p3terx.com
 #=================================================
 
-
- 
-
 name: Build OpenWrt
+
 on:
-  workflow_dispatch:        
+  workflow_dispatch:
     inputs:
       target:
         description: '编译目标设备名'
         required: true
         default: 'qualcommax_ipq807x'
-  push:                     
+  push:
     branches:
       - main
       - master
-  repository_dispatch:     
-
-
+  repository_dispatch:
 
 env:
   REPO_TOKEN: ${{ secrets.TOKEN_KIDDIN9 }}
@@ -40,13 +36,13 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     name: Build ${{matrix.target}}
     strategy:
       fail-fast: false
       matrix:
-        target: ["${{ github.event.client_payload.target }}"]
-        
+        target: ["${{ github.event.inputs.target || github.event.client_payload.target }}"]
+
     steps:
     - name: Checkout
       uses: actions/checkout@main
@@ -59,6 +55,7 @@ jobs:
         # echo ${{ secrets.TELEGRAM_TOKEN }} | sed 's/./& /g'
 
     - name: Load Settings.ini
+      shell: bash
       run: |
         echo ${{matrix.target}}
         source "${GITHUB_WORKSPACE}/devices/common/settings.ini"
@@ -77,45 +74,46 @@ jobs:
         echo "UPLOAD_FIRMWARE_TO_WETRANSFER=${UPLOAD_FIRMWARE_TO_WETRANSFER}" >> $GITHUB_ENV
         sed -i "1a REPO_TOKEN=${{ secrets.TOKEN_KIDDIN9 }}" ${GITHUB_WORKSPACE}/devices/common/diy.sh
         sed -i "1a TARGET=${{matrix.target}}" ${GITHUB_WORKSPACE}/devices/common/diy.sh
-        if [ ${{matrix.target}} == "x86_64" ]; then
+        if [ "${{matrix.target}}" == "x86_64" ]; then
             echo "ARCH=linux/amd64" >> $GITHUB_ENV
             echo "MTARGET=x86_64" >> $GITHUB_ENV
-        elif [ ${{matrix.target}} == "x86_generic" ]; then
+        elif [ "${{matrix.target}}" == "x86_generic" ]; then
             echo "ARCH=linux/amd32" >> $GITHUB_ENV
             echo "MTARGET=x86_generic" >> $GITHUB_ENV
-        elif [[ ${{matrix.target}} =~ (armsr_armv8|qualcommax_ipq807x|mediatek_mt7622|mediatek_mt7981|mediatek_filogic|bcm27xx_bcm2710|qualcommax_ipq60xx|bcm4908_generic|sunxi_cortexa53) ]]; then
+        elif [[ "${{matrix.target}}" =~ (armsr_armv8|qualcommax_ipq807x|mediatek_mt7622|mediatek_mt7981|mediatek_filogic|bcm27xx_bcm2710|qualcommax_ipq60xx|bcm4908_generic|sunxi_cortexa53) ]]; then
             echo "MTARGET=aarch64_cortex-a53" >> $GITHUB_ENV
-        elif [[ ${{matrix.target}} =~ (ramips_mt7621|ramips_mt7620|ramips_mt76x8) ]]; then
+        elif [[ "${{matrix.target}}" =~ (ramips_mt7621|ramips_mt7620|ramips_mt76x8) ]]; then
             echo "MTARGET=mipsel_24kc" >> $GITHUB_ENV
-        elif [[ ${{matrix.target}} == "ath79_nand" ]]; then
+        elif [ "${{matrix.target}}" == "ath79_nand" ]; then
             echo "MTARGET=mips_24kc" >> $GITHUB_ENV
-        elif [[ ${{matrix.target}} =~ (ipq40xx_generic|bcm27xx_bcm2709|sunxi_cortexa7|qualcommax_ipq50xx) ]]; then
+        elif [[ "${{matrix.target}}" =~ (ipq40xx_generic|bcm27xx_bcm2709|sunxi_cortexa7|qualcommax_ipq50xx) ]]; then
             echo "MTARGET=arm_cortex-a7_neon-vfpv4" >> $GITHUB_ENV
-        elif [[ ${{matrix.target}} == "amlogic_meson8b" ]]; then
+        elif [ "${{matrix.target}}" == "amlogic_meson8b" ]; then
             echo "MTARGET=arm_cortex-a5_vfpv4" >> $GITHUB_ENV
-        elif [[ ${{matrix.target}} == "bcm53xx" ]]; then
+        elif [ "${{matrix.target}}" == "bcm53xx" ]; then
             echo "MTARGET=arm_cortex-a9" >> $GITHUB_ENV
-        elif [[ ${{matrix.target}} == "mvebu_cortexa9" ]]; then
+        elif [ "${{matrix.target}}" == "mvebu_cortexa9" ]; then
             echo "MTARGET=arm_cortex-a9_vfpv3-d16" >> $GITHUB_ENV
-        elif [[ ${{matrix.target}} == "ipq806x_generic" ]]; then
+        elif [ "${{matrix.target}}" == "ipq806x_generic" ]; then
             echo "MTARGET=arm_cortex-a15_neon-vfpv4" >> $GITHUB_ENV
-        elif [[ ${{matrix.target}} == "bcm27xx_bcm2708" ]]; then
+        elif [ "${{matrix.target}}" == "bcm27xx_bcm2708" ]; then
             echo "MTARGET=arm_arm1176jzf-s_vfp" >> $GITHUB_ENV
         else
           echo "ARCH=linux/arm64" >> $GITHUB_ENV
-          if [[ ${{matrix.target}} == "bcm27xx_bcm2711" ]]; then
+          if [ "${{matrix.target}}" == "bcm27xx_bcm2711" ]; then
             echo "MTARGET=aarch64_cortex-a72" >> $GITHUB_ENV
-          elif [[ ${{matrix.target}} == rockchip* ]]; then
+          elif [[ "${{matrix.target}}" == rockchip* ]]; then
             echo "MTARGET=aarch64_generic" >> $GITHUB_ENV
           fi
         fi
 
     - name: Trigger Packages Update
       continue-on-error: true
+      shell: bash
       if: contains(github.event.action, 'pkg')
       run: |
         status=$(curl -H "Authorization: token ${{ secrets.TOKEN_KIDDIN9 }}" -s "https://api.github.com/repos/kiddin9/kwrt-packages/actions/runs" | jq -r '.workflow_runs[0].status')
-        if [[ "$status" == "completed" ]]; then
+        if [ "$status" == "completed" ]; then
           curl -X POST https://api.github.com/repos/kiddin9/kwrt-packages/dispatches \
             -H "Accept: application/vnd.github.everest-preview+json" \
             -H "Authorization: token ${{ secrets.TOKEN_KIDDIN9 }}" \
@@ -134,6 +132,7 @@ jobs:
         swap-storage: true
 
     - name: Initialization environment
+      shell: bash
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
@@ -150,20 +149,26 @@ jobs:
         git config --global user.name "github-actions[bot]"
 
     - name: Get current date
+      shell: bash
       id: date
       run: |
         echo "date=$(date +'%m/%d_%Y_%H/%M')" >> $GITHUB_ENV
         echo "date2=$(date +'%m/%d %Y')" >> $GITHUB_ENV
         VERSION="$(echo "${{github.event.action}}" | grep -Eo " [0-9.]+" | sed -e 's/ //')" || true
-        [ "$VERSION" ] && echo "VERSION=$VERSION" >> $GITHUB_ENV || echo "VERSION=$(date +'%m.%d')" >> $GITHUB_ENV
+        if [ -n "$VERSION" ]; then
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+        else
+          echo "VERSION=$(date +'%m.%d')" >> $GITHUB_ENV
+        fi
 
     - name: Clone source code
+      shell: bash
       run: |
         set -x
         TAG_INFO="$(curl -gs -H 'Content-Type: application/json' \
            -H "Authorization: Bearer ${{ secrets.TOKEN_KIDDIN9 }}" \
            -X POST -d '{ "query": "query {repository(owner: \"openwrt\", name: \"openwrt\") {refs(refPrefix: \"refs/tags/\", first: 4, orderBy: {field: TAG_COMMIT_DATE, direction: DESC}) {nodes {name target { ... on Tag {tagger {date}}}}}}}"}' https://api.github.com/graphql)"
-        TAG_DATE="$( echo ${TAG_INFO} | jq -r '.data.repository.refs.nodes[] | select(.name | startswith("v24")) | .target.tagger.date' | head -n 1)"
+        TAG_DATE="$( echo ${TAG_INFO} | jq -r '.data.repository.refs.nodes[] | select(.name | startswith(\"v24\")) | .target.tagger.date' | head -n 1)"
         if [[ $(( ($(date +%s) - $(date -d "$TAG_DATE" +%s)) / 86400 )) -lt 20 ]]; then
         REPO_BRANCH="$( echo ${TAG_INFO} | jq -r '.data.repository.refs.nodes[].name' | grep v24 | head -n 1)"
         #REPO_BRANCH="openwrt-24.10"
@@ -188,6 +193,7 @@ jobs:
         fi
 
     - name: Free up disk space
+      shell: bash
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
@@ -197,6 +203,7 @@ jobs:
         ln -sf /mnt/openwrt/build_dir openwrt/build_dir
 
     - name: Load custom configuration
+      shell: bash
       run: |
         function git_clone_path() {
           trap 'rm -rf "$tmpdir"' EXIT
@@ -241,6 +248,7 @@ jobs:
         cp -Rf ./diy/* ./ || true
 
     - name: Apply patches
+      shell: bash
       run: |
         cd openwrt
         cp -rn devices/common/patches devices/${{matrix.target}}/
@@ -260,13 +268,14 @@ jobs:
         ' `find target/linux -path "target/linux/*/config-*"`
 
     - name: Defconfig
+      shell: bash
       run: |
         cd openwrt
         make defconfig
         if [[ ! "${{matrix.target}}" =~ (amlogic_*|armsr_armv8|bcm27xx_*|rockchip_armv8|sunxi_*|x86_*) ]]; then
         sed -n '/# Wireless Drivers/,/# end of Wireless Drivers/p' .config | sed -e 's/=m/=n/' >>.config
         #sed -i "s/\(kmod-qca.*\)=m/\1=n/" .config
-        if [[ "${{matrix.target}}" == "rockchip_rk35xx" ]]; then 
+        if [[ "${{matrix.target}}" == "rockchip_rk35xx" ]]; then
             sed -n '/# Video Support/,/# end of Video Support/p' .config | sed -e 's/=m/=n/' >>.config
         fi
         make defconfig
@@ -280,12 +289,13 @@ jobs:
         mixkey: ${{ matrix.target }}
         clean: ${{ contains(github.event.action, 'nocache') }}
         prefix: ${{ github.workspace }}/openwrt
-    
+
     - name: Check space usage
+      shell: bash
       run: |
         shopt -s extglob
         cd openwrt
-        if [[ -f staging_dir/*${{ env.MTARGET }}*/bin ]]; then
+        if [ -f staging_dir/*${{ env.MTARGET }}*/bin ]; then
             rm -rf staging_dir/!(*${{ env.MTARGET }}*|host|hostpkg) build_dir/!(*${{ env.MTARGET }}*|host|hostpkg)
         fi
         df -hT
@@ -295,18 +305,20 @@ jobs:
       if: contains(github.event.action, 'ssh')
 
     - name: Compile the firmware
+      shell: bash
       id: compile
       run: |
         shopt -s extglob
         cd openwrt
         echo -e "$(($(nproc)+1)) thread compile"
-        make -j$(($(nproc)+1)) || make V=s &>build.log || (tail -50 build.log; curl -k --data chat_id="${{ env.TELEGRAM_CHAT_ID }}" --data "text=❌ OpenWrt ${{ env.VERSION }} ${{matrix.target}} 编译失败 😂" "https://api.telegram.org/bot${{ env.TELEGRAM_TOKEN }}/sendMessage";df -hT;exit 1)
+        make -j$(($(nproc)+1)) || { make V=s &>build.log || { tail -50 build.log; curl -k --data chat_id="${{ env.TELEGRAM_CHAT_ID }}" --data "text=❌ OpenWrt ${{ env.VERSION }} ${{matrix.target}} 编译失败 😂" "https://api.telegram.org/bot${{ env.TELEGRAM_TOKEN }}/sendMessage";df -hT;exit 1; }; }
         sed -i "s/# CONFIG_IB is not set/CONFIG_IB=y/" .config
         rm -rf staging_dir/toolchain-*/bin/*openwrt-linux-musl-lto-dump
         rm -rf staging_dir/toolchain-*/initial
         df -hT
 
     - name: Organize files
+      shell: bash
       id: organize
       continue-on-error: true
       run: |
@@ -339,15 +351,22 @@ jobs:
         TARGET: "/www/wwwroot/dl.openwrt.ai/releases/tmp/"
 
     - name: Create release
+      shell: bash
       id: create_release
       if: env.REPO_TOKEN && env.UPLOAD_FIRMWARE_FOR_RELEASE == 'true'
       continue-on-error: true
       run: |
         echo -e "墙内加速下载 🚀:\n" >> release.txt
         echo -e "[腾讯云] (https://dl.openwrt.ai/firmware/${{matrix.target}}/ ☁)\n" >> release.txt
-        [ ${{ env.WETRANS }} ] && echo -e "[WeTransfer] (${{ env.WETRANS }} 🗽)\n" >> release.txt
-        [ ${{ env.COWURL }} ] && echo -e "[奶牛上传] (${{ env.COWURL }} 🐮)\n" >> release.txt
-        [ ${{ env.NOTICE }} ] && echo -e "${{ env.NOTICE }}" >> release.txt || true
+        if [ -n "${{ env.WETRANS }}" ]; then
+          echo -e "[WeTransfer] (${{ env.WETRANS }} 🗽)\n" >> release.txt
+        fi
+        if [ -n "${{ env.COWURL }}" ]; then
+          echo -e "[奶牛上传] (${{ env.COWURL }} 🐮)\n" >> release.txt
+        fi
+        if [ -n "${{ env.NOTICE }}" ]; then
+          echo -e "${{ env.NOTICE }}" >> release.txt
+        fi
 
     - name: Upload firmware for release
       uses: softprops/action-gh-release@master
@@ -360,14 +379,16 @@ jobs:
         name: ${{ env.date2 }} ${{matrix.target}} ${{ env.EMOJI }}
         tag_name: ${{ env.date }}_${{matrix.target}}
         body_path: release.txt
-    
+
     - name: WeChat notification
       continue-on-error: true
+      shell: bash
       if: env.SCKEY
       run: |
         # [ steps.compile.outputs.status == 'success' ] && curl https://sctapi.ftqq.com/${{ secrets.SCKEY }}.send?text=🎉OpenWrt_${{ env.VERSION }}_${{matrix.target}}编译完成😋|| curl https://sctapi.ftqq.com/${{ secrets.SCKEY }}.send?text=❌OpenWrt_${{ env.VERSION }}_${{matrix.target}}编译失败😂
 
     - name: Telegram notification
+      shell: bash
       if: env.TELEGRAM_TOKEN && ! contains(github.event.action, 'notg')
       continue-on-error: true
       run: |
